<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:fitsSystemWindows="true">

    <ImageView
        android:src="@drawable/ccimps1"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal">
    </ImageView>

    <Button
        android:id="@+id/btn_activity_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:background="@color/colorPrimary"
        android:text="@string/title_activity_login" />

    <Button
        android:id="@+id/btn_activity_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:text="@string/title_activity_register" />


</LinearLayout>